force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/LRES_Hierarchy_Template_Level__mdt.object-meta.xml
<CustomObject>
    <label>Hierarchy Template Level</label>
    <pluralLabel>Hierarchy Template Levels</pluralLabel>
</CustomObject>