force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Card_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Card_Field_API_Names__c</fullName>
    <description
  >Comma-separated list of field API names to display on cards. The first field becomes the card title.</description>
    <inlineHelpText
  >Comma-separated list of field API names to display on cards. The first field becomes the card title.</inlineHelpText>
    <label>Card Field API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>