force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Card_Field_Icons__c.field-meta.xml
<CustomField>
    <fullName>Card_Field_Icons__c</fullName>
    <description
  >Comma-separated list of SLDS icon names or emoji codes to display beside each field (for example, account, graph, store, U+1F389).</description>
    <inlineHelpText
  >Comma-separated list of SLDS icon names or emoji codes to display beside each field (for example, account, graph, store, U+1F389).</inlineHelpText>
    <label>Card Field Icons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>