force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Child_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_API_Name__c</fullName>
    <label>Child Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>