force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Filter_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_API_Names__c</fullName>
    <label>Filter Field API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>