force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Hierarchy_Template__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Template__c</fullName>
    <label>Hierarchy Template</label>
    <referenceTo>LRES_Hierarchy_Template__mdt</referenceTo>
    <relationshipLabel>Hierarchy Template Levels</relationshipLabel>
    <relationshipName>Hierarchy_Template_Levels</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>