force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Level_Number__c.field-meta.xml
<CustomField>
    <fullName>Level_Number__c</fullName>
    <label>Level Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>