force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Records_ORDER_BY_Clause__c.field-meta.xml
<CustomField>
    <fullName>Records_ORDER_BY_Clause__c</fullName>
    <label>Records ORDER BY Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>