force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Search_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Search_Field_API_Names__c</fullName>
    <label>Search Field API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>