force-app/main/default/objects/LRES_Hierarchy_Template_Level__mdt/fields/Show_Card_Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Show_Card_Field_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Card Field Labels</label>
    <type>Checkbox</type>
</CustomField>